ensight_lib/test/customFiles/testFlowFiles/invalidFiles/EnsightReader/QStringRead/QStringRead_FaultyWildcards.geo
ASCII (OR SIMPLY ANYTHING ELSE BESIDES FORTRAN OR C BINARY)

node id given
element id given 
point 1.0
